--- a/source/form.html
+++ b/source/form.html
@@ -5,27 +5,26 @@
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
   <link rel="stylesheet" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body class="page">
   <div class="container">
     <header class="page-header">
-      <a class="page-header__logo">
-        <img src="https://htmlacademy.ru/intensive/adaptive" width="101" height="84" alt="Логотип города Седона">
+      <a href="index.html" class="page-logo">
+        <img src="https://via.placeholder.com/150x150" width="101" height="84" alt="Логотип города Седона">
       </a>
-      <nav class="main-nav">
-        <ul class="main-nav__list site-list list">
-          <li class="site-list__item">
+      <nav class="page-header__nav main-nav">
+        <ul class="main-nav__item main-nav-list list">
+          <li class="main-nav-list__item">
             <a href="index.html">Главная</a>
           </li>
-          <li class="site-list__item">
+          <li class="main-nav-list__item">
             <a href="photo.html">Фото и Видео</a>
           </li>
-          <li class="site-list__item site-list__item-active">
+          <li class="main-nav-list__item main-nav-list__item--active">
             <a>Форма отзыва</a>
           </li>
-          <li class="site-list__item">
+          <li class="main-nav-list__item">
             <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
           </li>
         </ul>
@@ -39,25 +38,26 @@
         <img class="main-promo__image" src="https://via.placeholder.com/150x150" width="456" height="350"
           alt="Приветствие города">
       </section>
-      <section class="main-form">
+      <section class="page-main__form main-form">
         <h2 class="visually-hidden">Форма обратной связи</h2>
-        <div class="main-features__wrapper">
-          <span class="main-features__title">Оставьте свой отзыв</span>
-          <p class="main-features__description">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а так же о посещенных вами достопримечательностях</p>
+        <div class="title-wrapper">
+          <span class="title-wrapper__text">Оставьте свой отзыв</span>
+          <p class="title-wrapper__description">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а так же о
+            посещенных вами достопримечательностях</p>
         </div>
         <form action="https://echo.htmlacademy.ru/courses" method="post" id="formfield">
           <fieldset>
             <legend>Представьтесь</legend>
-            <label for="firstName">
+            <label for="first-name">
               <span>Имя*:</span>
             </label>
             <input type="text" id="first-name" placeholder="Петр" name="firstName" aria-label="Указать имя" required>
-            <label for="lastName">
+            <label for="last-name">
               <span>Фамилия*:</span>
             </label>
             <input type="text" id="last-name" placeholder="Иванов" name="secondName" aria-label="Указать фамилию"
               required>
-            <label for="middleName">
+            <label for="middle-name">
               <span>Отчество:</span>
             </label>
             <input type="text" id="middle-name" placeholder="Александрович" name="middleName"
@@ -78,7 +78,7 @@
           </fieldset>
           <fieldset>
             <legend>Ваше общее впечатление:</legend>
-            <label for="viewPointPositive">Скорее положительное</label>
+            <label for="view-point-positive">Скорее положительное</label>
             <input type="radio" id="view-point-positive" name="answer" value="viewPointPositive"
               aria-label="Указать положительное" checked>
             <label for="view-point-negative">Скорее отрицательное</label>
@@ -101,7 +101,8 @@
           </fieldset>
           <fieldset>
             <legend>Опишите свои эмоции:</legend>
-            <textarea form="formfield" placeholder="Опишите подробно все свои восторги" cols="25"></textarea>
+            <textarea form="formfield" placeholder="Опишите подробно все свои восторги" cols="25"
+              aria-label="Описать свои впечатления от поездки"></textarea>
           </fieldset>
           <button type="submit" aria-label="Отправить указанные данные">Отправить отзыв</button>
         </form>
@@ -110,17 +111,17 @@
           <ul class="page-footer__list list" aria-label="Социальные сети">
             <li class="page-footer__item">
               <a href="#" aria-label="Перейти в аккаунт города в Twitter">
-                <img src="" width="17" height="15" alt="Twitter">
+                <img src="https://via.placeholder.com/150x150" width="17" height="15" alt="Twitter">
               </a>
             </li>
             <li class="page-footer__item">
               <a href="#" aria-label="Перейти в аккаунт города в Facebook">
-                <img src="" width="9" height="19" alt="Facebook">
+                <img src="https://via.placeholder.com/150x150" width="9" height="19" alt="Facebook">
               </a>
             </li>
             <li class="page-footer__item">
               <a href="#" aria-label="Перейти в аккаунт города в YouTube">
-                <img src="" width="20" height="14" alt="YouTube">
+                <img src="https://via.placeholder.com/150x150" width="20" height="14" alt="YouTube">
               </a>
             </li>
           </ul>
