--- a/source/photo.html
+++ b/source/photo.html
@@ -5,27 +5,26 @@
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
   <link rel="stylesheet" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body class="page">
   <div class="container">
     <header class="page-header">
-      <a class="page-header__logo">
-        <img src="https://htmlacademy.ru/intensive/adaptive" width="101" height="84" alt="Логотип города Седона">
+      <a href="index.html" class="page-logo">
+        <img src="https://via.placeholder.com/150x150" width="101" height="84" alt="Логотип города Седона">
       </a>
-      <nav class="main-nav">
-        <ul class="main-nav__list site-list list">
-          <li class="site-list__item">
+      <nav class="page-header__nav main-nav">
+        <ul class="main-nav__item main-nav-list list">
+          <li class="main-nav-list__item">
             <a href="index.html">Главная</a>
           </li>
-          <li class="site-list__item site-list__item-active">
+          <li class="main-nav-list__item main-nav-list__item--active">
             <a>Фото и Видео</a>
           </li>
-          <li class="site-list__item">
+          <li class="main-nav-list__item">
             <a href="form.html">Форма отзыва</a>
           </li>
-          <li class="site-list__item">
+          <li class="main-nav-list__item">
             <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
           </li>
         </ul>
@@ -40,49 +39,51 @@
           alt="Приветствие города">
       </section>
       <section class="main-media">
-        <div class="main-features__wrapper">
-          <span class="main-features__title">Фото и видео</span>
-          <span class="main-features__description">Не можете решиться на путешествие из-за курса? Фотографии помогут Вам забыть о политике и экономике.</span>
+        <div class="main-media__item title-wrapper">
+          <span class="title-wrapper__text">Фото и видео</span>
+          <span class="title-wrapper__description">Не можете решиться на путешествие из-за курса? Фотографии помогут Вам
+            забыть о политике и экономике.</span>
         </div>
-        <ul class="main-media__list list">
-          <li class="main-media__item">
+        <ul class="main-media__list main-media-list list">
+          <li class="main-media-list__item main-media-item">
             <a href="#" aria-label="Открыть полный размер фото"><img src="https://via.placeholder.com/150x150"
                 width="280" height="280" alt="Фото дороги"></a>
-            <span class="main-media__text">Неродные просторы</span>
-            <span class="main-media__text main-media__text_size_small">Автор фото: Борис</span>
-            <button type="button" class="main-media__button"></button>
-            <span class="main-media__text main-media__size_weight">1350</span>
+            <span class="main-media-item__text">Неродные просторы</span>
+            <span class="main-media-item__text main-media-item__text--size-small">Автор фото: Борис</span>
+            <button type="button" class="main-media-item__button"></button>
+            <span class="main-media-item__text main-media-item__text--size-weight">1350</span>
           </li>
-          <li class="main-media__item">
+          <li class="main-media-list__item main-media-item">
             <a href="#" aria-label="Открыть полный размер фото"><img src="https://via.placeholder.com/150x150"
                 width="280" height="280" alt="Фото растения"></a>
-            <span class="main-media__text">Местная растительность</span>
-            <span class="main-media__text main-media__text_size_small">Автор фото: Сергей</span>
-            <button type="button" class="main-media__button"></button>
-            <span class="main-media__text main-media__size_weight">143</span>
+            <span class="main-media-item__text">Местная растительность</span>
+            <span class="main-media-item__text main-media-item__text--size-small">Автор фото: Сергей</span>
+            <button type="button" class="main-media-item__button"></button>
+            <span class="main-media-item__text main-media-item__text--size-weight">143</span>
           </li>
-          <li class="main-media__item">
+          <li class="main-media-list__item main-media-item">
             <a href="#" aria-label="Открыть полный размер фото"><img src="https://via.placeholder.com/150x150"
                 width="280" height="280" alt="Фото дороги"></a>
-            <span class="main-media__text">Дорога на север</span>
-            <span class="main-media__text main-media__text_size_small">Автор фото: Петр</span>
-            <button type="button" class="main-media__button"></button>
-            <span class="main-media__text main-media__size_weight">96</span>
+            <span class="main-media-item__text">Дорога на север</span>
+            <span class="main-media-item__text main-media-item__text--size-small">Автор фото: Петр</span>
+            <button type="button" class="main-media-item__button"></button>
+            <span class="main-media-item__text main-media-item__text--size-weight">96</span>
           </li>
-          <li class="main-media__item">
+          <li class="main-media-list__item main-media-item">
             <a href="#" aria-label="Открыть полный размер фото"><img src="https://via.placeholder.com/150x150"
                 width="280" height="280" alt="Фото достопримечательности Мост Дьявола"></a>
-            <span class="main-media__text">Мост Дьявола</span>
-            <span class="main-media__text main-media__text_size_small">Автор фото: Антон</span>
-            <button type="button" class="main-media__button"></button>
-            <span class="main-media__text main-media__size_weight">254</span>
+            <span class="main-media-item__text">Мост Дьявола</span>
+            <span class="main-media-item__text main-media-item__text--size-small">Автор фото: Антон</span>
+            <button type="button" class="main-media-item__button"></button>
+            <span class="main-media-item__text main-media-item__text--size-weight">254</span>
           </li>
         </ul>
       </section>
       <section>
-        <div class="main-features__wrapper">
-          <span class="main-features__title">Все еще сомневаетесь?</span>
-          <span class="main-features__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</span>
+        <div class="title-wrapper">
+          <span class="title-wrapper__text">Все еще сомневаетесь?</span>
+          <span class="title-wrapper__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</span>
+          <button type="submit" aria-label="Переход на страницу поиска гостиниц">Показать гостиницы</button>
         </div>
       </section>
       <footer class="page-footer">
@@ -90,17 +91,17 @@
         <ul class="page-footer__list list" aria-label="Социальные сети">
           <li class="page-footer__item">
             <a href="#" aria-label="Перейти в аккаунт города в Twitter">
-              <img src="" width="17" height="15" alt="Twitter">
+              <img src="https://via.placeholder.com/150x150" width="17" height="15" alt="Twitter">
             </a>
           </li>
           <li class="page-footer__item">
             <a href="#" aria-label="Перейти в аккаунт города в Facebook">
-              <img src="" width="9" height="19" alt="Facebook">
+              <img src="https://via.placeholder.com/150x150" width="9" height="19" alt="Facebook">
             </a>
           </li>
           <li class="page-footer__item">
             <a href="#" aria-label="Перейти в аккаунт города в YouTube">
-              <img src="" width="20" height="14" alt="YouTube">
+              <img src="https://via.placeholder.com/150x150" width="20" height="14" alt="YouTube">
             </a>
           </li>
         </ul>
