добавлены стили страницы формы

--- a/source/photo.html
+++ b/source/photo.html
@@ -83,7 +83,7 @@
         <div class="title-wrapper">
           <span class="title-wrapper__text">Все еще сомневаетесь?</span>
           <span class="title-wrapper__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</span>
-          <button type="submit" aria-label="Переход на страницу поиска гостиниц">Показать гостиницы</button>
+          <img src="https://via.placeholder.com/150x150" width="320" height="201" alt="Фото дороги">
         </div>
       </section>
       <footer class="page-footer">
