доработка стилей формы

--- a/source/form.html
+++ b/source/form.html
@@ -64,22 +64,22 @@
           </fieldset>
           <fieldset class="form-fields__viewpoints form-name">
             <legend class="form-name__title">Ваше общее впечатление:</legend>
-            <input class="form-name__field" type="radio" id="viewpoint-positive" name="answer" value="viewpointPositive" aria-label="Указать положительное" checked>
+            <input class="form-name__field-radio" type="radio" id="viewpoint-positive" name="answer" value="viewpointPositive" aria-label="Указать положительное" checked>
             <label class="form-name__label form-name__label--size-bold text-transform" for="viewpoint-positive">Скорее положительное</label>
-            <input class="form-name__field" type="radio" id="viewpoint-negative" name="answer" value="viewpointNegative" aria-label="Указать отрицательное">
+            <input class="form-name__field-radio" type="radio" id="viewpoint-negative" name="answer" value="viewpointNegative" aria-label="Указать отрицательное">
             <label class="form-name__label form-name__label--size-bold text-transform" for="viewpoint-negative">Скорее отрицательное</label>
-            <input class="form-name__field" type="radio" id="viewpoint-difficult" name="answer" value="viewpointDifficult" aria-label="Затрудняюсь ответить">
+            <input class="form-name__field-radio" type="radio" id="viewpoint-difficult" name="answer" value="viewpointDifficult" aria-label="Затрудняюсь ответить">
             <label class="form-name__label form-name__label--size-bold text-transform" for="viewpoint-difficult">Затрудняюсь ответить</label>
           </fieldset>
           <fieldset class="form-fields__places form-name">
             <legend class="form-name__title">Посещенные достопримечательности:</legend>
-            <input class="form-name__field" type="checkbox" id="bridge" name="bridgeDevil" aria-label="Указать Мост Дьявола" checked>
+            <input class="form-name__field-checkbox" type="checkbox" id="bridge" name="bridgeDevil" aria-label="Указать Мост Дьявола" checked>
             <label class="form-name__label form-name__label--size-bold text-transform" for="bridge">Мост Дьявола</label>
-            <input class="form-name__field" type="checkbox" id="mount" name="mountBell" aria-label="Указать Гора-Колокол" checked>
+            <input class="form-name__field-checkbox" type="checkbox" id="mount" name="mountBell" aria-label="Указать Гора-Колокол" checked>
             <label class="form-name__label form-name__label--size-bold text-transform" for="mount">Гора-Колокол</label>
-            <input class="form-name__field" type="checkbox" id="park" name="slidePark" aria-label="Указать Слайд-парк" checked>
+            <input class="form-name__field-checkbox" type="checkbox" id="park" name="slidePark" aria-label="Указать Слайд-парк" checked>
             <label class="form-name__label form-name__label--size-bold text-transform" for="park">Слайд-парк</label>
-            <input class="form-name__field" type="checkbox" id="rocks" name="redRocks" aria-label="Указать Красные скалы">
+            <input class="form-name__field-checkbox" type="checkbox" id="rocks" name="redRocks" aria-label="Указать Красные скалы">
             <label class="form-name__label form-name__label--size-bold text-transform" for="rocks">Красные скалы</label>
           </fieldset>
           <fieldset class="form-fields__emotions form-name">
