--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Academy: Седона</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -10,8 +11,8 @@
 <body class="page">
   <div class="container">
     <header class="page-header">
-      <a class="page-header_logo logo">
-        <img src="https://via.placeholder.com/150x150" alt="Логотип города Седона">
+      <a class="page-header__logo logo">
+        <img src="https://via.placeholder.com/150x150" width="101" height="84" alt="Логотип города Седона">
       </a>
       <nav class="page-header__nav main-nav">
         <ul class="main-nav__item main-nav-list list">
@@ -29,11 +30,11 @@
           </li>
         </ul>
       </nav>
-      <button class="page-header__button" type="button"><img src="img/icon-menu.svg"></button>
+      <button class="page-header__button" type="button"></button>
     </header>
     <main class="page-main">
       <h1 class="visually-hidden">Информация о городе</h1>
-      <section class="page-main__promo main-promo">
+      <section class="page-main__promo">
         <h2 class="visually-hidden">Приветствие от города</h2>
       </section>
       <section class="page-main__features">
@@ -49,10 +50,10 @@
               <span class="features-item__number">– №1 –</span>
               <span class="features-item__text">Седона не аттракцион для туристов, там течет своя жизнь</span>
             </div>
-            <img src="https://via.placeholder.com/150x150" class="page-main__photo-city" alt="Вид на город">
+            <img src="https://via.placeholder.com/150x150" width="320" height="260" class="page-main__photo-city" alt="Вид на город">
             <ul class="page-main__city-features city-features list">
               <li class="city-features__item city-features-item">
-                <span class="city-features-item__title city-features-item__title--magrin">Жилье</span>
+                <span class="city-features-item__title city-features-item__title--margin">Жилье</span>
                 <span class="city-features-item__text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</span>
               </li>
               <li class="city-features__item city-features-item city-features-item--padding-large">
@@ -71,7 +72,7 @@
               <span class="features-item__number">– №2 –</span>
               <span class="features-item__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</span>
             </div>
-            <img src="https://via.placeholder.com/150x150" class="page-main__photo">
+            <img src="https://via.placeholder.com/150x150" width="320" height="260" class="page-main__photo" alt="вид на достопримечательность">
           </li>
           <li class="page-main__item features-item features-item--color-padding list">
             <span class="features-item__title features-item__title--width">Небольшая площадь</span>
@@ -102,7 +103,7 @@
       </section>
     </main>
     <footer class="page-footer">
-      <span class="page-footer-text">#Visitsedona</span>
+      <span class="page-footer__text">#Visitsedona</span>
       <ul class="page-footer__list list" aria-label="Социальные сети">
         <li class="page-footer__item">
           <a href="#" aria-label="Перейти в аккаунт города в Twitter" class="page-footer__link">
@@ -123,7 +124,7 @@
       <div class="page-footer__copyright">
         <p class="page-footer__copyright-text">Разработано</p>
         <a href="https://htmlacademy.ru/intensive/adaptive" aria-label="Переход на сайт разработчика HTML Academy">
-          <img src="https://via.placeholder.com/150x150" width="27" height="34">
+          <img src="https://via.placeholder.com/150x150" width="27" height="34" alt="логотип HTML Academy">
         </a>
       </div>
     </footer>
