--- a/source/photo.html
+++ b/source/photo.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Academy: Седона</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -45,7 +46,7 @@
         <ul class="main-media__list list">
           <li class="main-media__item">
             <a href="#" aria-label="Открыть полный размер фото" class="main-media__link main-media__link--size-large">
-              <img src="https://via.placeholder.com/150x150" alt="Фото дороги">
+              <img src="https://via.placeholder.com/150x150" width="280" height="280" alt="Фото дороги">
             </a>
             <div class="main-media__wrapper">
               <span class="main-media__text">Неродные просторы</span>
@@ -58,8 +59,8 @@
           </li>
           <li class="main-media__item main-media__item--padding">
             <a href="#" aria-label="Открыть полный размер фото" class="main-media__link main-media__link--size">
-              <img src="https://via.placeholder.com/150x150" alt="Фото растения"></a>
-            <div class="main-media__wrapper main-media__wrapper--margin">
+              <img src="https://via.placeholder.com/150x150" width="280" height="280" alt="Фото растения"></a>
+            <div class="main-media__wrapper main-media__wrapper--size">
               <span class="main-media__text">Местная растительность</span>
               <span class="main-media__text main-media__text--size-small">Автор фото: Сергей</span>
             </div>
@@ -69,8 +70,8 @@
             </div>
             </li>
           <li class="main-media__item main-media__item--padding">
-            <a href="#" aria-label="Открыть полный размер фото" class="main-media__link main-media__link--size">
-              <img src="https://via.placeholder.com/150x150" alt="Фото дороги"></a>
+            <a href="#" class="main-media__link main-media__link--size" aria-label="Открыть полный размер фото">
+              <img src="https://via.placeholder.com/150x150" width="280" height="280" alt="Фото дороги"></a>
             <div class="main-media__wrapper main-media__wrapper--size">
               <span class="main-media__text">Дорога на север</span>
               <span class="main-media__text main-media__text--size-small">Автор фото: Петр</span>
@@ -82,7 +83,7 @@
           </li>
           <li class="main-media__item main-media__item--padding">
             <a href="#" aria-label="Открыть полный размер фото" class="main-media__link main-media__link--size">
-              <img src="https://via.placeholder.com/150x150" alt="Фото достопримечательности Мост Дьявола"></a>
+              <img src="https://via.placeholder.com/150x150" width="280" height="280" alt="Фото достопримечательности Мост Дьявола"></a>
             <div class="main-media__wrapper main-media__wrapper--size">
               <span class="main-media__text">Мост Дьявола</span>
               <span class="main-media__text main-media__text--size-small">Автор фото: Антон</span>
@@ -99,10 +100,10 @@
           <span class="title-wrapper__text title-wrapper__text--padding">Все еще сомневаетесь?</span>
           <span class="title-wrapper__description title-wrapper__description--width">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</span>
         </div>
-        <img src="https://via.placeholder.com/150x150" alt="Фото дороги"class="page-photo-main__video">
+        <img src="https://via.placeholder.com/150x150" alt="Фото дороги" class="page-photo-main__video">
       </section>
       <footer class="page-footer">
-        <span class="page-footer-text">#Visitsedona</span>
+        <span class="page-footer__text">#Visitsedona</span>
         <ul class="page-footer__list list" aria-label="Социальные сети">
           <li class="page-footer__item">
             <a href="#" aria-label="Перейти в аккаунт города в Twitter" class="page-footer__link">
@@ -123,7 +124,7 @@
         <div class="page-footer__copyright">
           <p class="page-footer__copyright-text">Разработано</p>
           <a href="https://htmlacademy.ru/intensive/adaptive" aria-label="Переход на сайт разработчика HTML Academy">
-            <img src="https://via.placeholder.com/150x150" width="27" height="34">
+            <img src="https://via.placeholder.com/150x150" width="27" height="34" alt="логотип HTML Academy">
           </a>
         </div>
       </footer>
