--- a/source/photo.html
+++ b/source/photo.html
@@ -38,10 +38,9 @@
         <h2 class="visually-hidden">Приветствие от города</h2>
       </section>
       <section class="page-photo-main__media main-media">
-        <div class="title-wrapper title-wrapper--padding">
-          <span class="title-wrapper__text title-wrapper__text--padding">Фото и видео</span>
-          <span class="title-wrapper__description">Не можете решиться на путешествие из-за курса? Фотографии помогут Вам
-            забыть о политике и экономике.</span>
+        <div class="title-wrapper title-wrapper--padding-medium">
+          <span class="title-wrapper__text title-wrapper__text--margin-medium">Фото и видео</span>
+          <span class="title-wrapper__description">Не можете решиться на путешествие из-за курса? Фотографии помогут Вам забыть о политике и экономике.</span>
         </div>
         <ul class="main-media__list list">
           <li class="main-media__item">
@@ -64,21 +63,21 @@
               <span class="main-media__text">Местная растительность</span>
               <span class="main-media__text main-media__text--size-small">Автор фото: Сергей</span>
             </div>
-            <div class="main-media__container main-media__container--width">
-              <button type="button" class="main-media__button button"></button>
+            <div class="main-media__container main-media__container--width-small">
+              <button type="button" class="main-media__button main-media__button--margin button"></button>
               <span class="main-media__text main-media__text--size-weight">143</span>
             </div>
             </li>
           <li class="main-media__item main-media__item--padding">
             <a href="#" class="main-media__link main-media__link--size" aria-label="Открыть полный размер фото">
               <img src="https://via.placeholder.com/150x150" width="280" height="280" alt="Фото дороги"></a>
-            <div class="main-media__wrapper main-media__wrapper--size">
+            <div class="main-media__wrapper main-media__wrapper--size-padding">
               <span class="main-media__text">Дорога на север</span>
               <span class="main-media__text main-media__text--size-small">Автор фото: Петр</span>
             </div>
-            <div class="main-media__container main-media__container--width">
-              <button type="button" class="main-media__button button"></button>
-              <span class="main-media__text main-media__text--size-weight">96</span>
+            <div class="main-media__container main-media__container--width-small-color">
+              <button type="button" class="main-media__button main-media__button--margin button"></button>
+              <span class="main-media__text main-media__text--size-weight-margin">96</span>
             </div>
           </li>
           <li class="main-media__item main-media__item--padding">
@@ -88,8 +87,8 @@
               <span class="main-media__text">Мост Дьявола</span>
               <span class="main-media__text main-media__text--size-small">Автор фото: Антон</span>
             </div>
-            <div class="main-media__container main-media__container--width">
-              <button type="button" class="main-media__button button"></button>
+            <div class="main-media__container main-media__container--width-small">
+              <button type="button" class="main-media__button main-media__button--margin button"></button>
               <span class="main-media__text main-media__text--size-weight">254</span>
             </div>
           </li>
