--- a/source/index.html
+++ b/source/index.html
@@ -41,7 +41,7 @@
         <h2 class="visually-hidden">Преимущества города</h2>
         <div class="page-main__item title-wrapper">
           <span class="title-wrapper__text">Седона &mdash; небольшой городок в Аризоне, заслуживающий большего!</span>
-          <span class="title-wrapper__description">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</span>
+          <span class="title-wrapper__description title-wrapper__description--width-large">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</span>
         </div>
         <ol class="page-main__list list">
           <li class="page-main__list-container">
@@ -69,24 +69,24 @@
           <li class="page-main__list-container">
             <div class="page-main__item features-item features-item--padding list">
               <span class="features-item__title">Там есть Мост дьявола</span>
-              <span class="features-item__number">– №2 –</span>
+              <span class="features-item__number features-item__number--margin">– №2 –</span>
               <span class="features-item__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</span>
             </div>
             <img src="https://via.placeholder.com/150x150" width="320" height="260" class="page-main__photo" alt="вид на достопримечательность">
           </li>
           <li class="page-main__item features-item features-item--color-padding list">
             <span class="features-item__title features-item__title--width">Небольшая площадь</span>
-            <span class="features-item__number">– № 3 –</span>
+            <span class="features-item__number features-item__number--margin">– № 3 –</span>
             <span class="features-item__text">Все интересные места находятся очень близко</span>
           </li>
           <li class="page-main__item features-item features-item--color-padding list">
             <span class="features-item__title features-item__title--width">Красивая дорога</span>
-            <span class="features-item__number">– № 4 –</span>
+            <span class="features-item__number features-item__number--margin">– № 4 –</span>
             <span class="features-item__text features-item__text--width">Ехать в Седону из Лас-Вегаса совсем не скучно!</span>
           </li>
           <li class="page-main__item features-item features-item--color-padding list">
             <span class="features-item__title features-item__title--width">Мало туристов</span>
-            <span class="features-item__number">– № 5 –</span>
+            <span class="features-item__number features-item__number--margin">– № 5 –</span>
             <span class="features-item__text features-item__text--width">Большинство едет в Гранд Каньон и толпится там</span>
           </li>
         </ol>
@@ -94,12 +94,12 @@
       <section class="page-main__item title-wrapper title-wrapper--padding">
         <h2 class="visually-hidden">Бронирование гостиницы</h2>
         <span class="title-wrapper__text title-wrapper__text--text-large">Заинтересовались?</span>
-        <span class="title-wrapper__description">Укажите предполагаемые даты поездки, и мы покажем Вам лучшие предложения гостиниц в Седоне</span>
-        <a class="title-wrapper__button button" href="#" aria-label="Переход на страницу поиска гостиниц">Найти гостиницу</a>
+        <span class="title-wrapper__description title-wrapper__description--width-medium">Укажите предполагаемые даты поездки, и мы покажем Вам лучшие предложения гостиниц в Седоне</span>
+        <a class="title-wrapper__button title-wrapper-button button" href="#" aria-label="Переход на страницу поиска гостиниц">Найти гостиницу</a>
       </section>
       <section class="page-main__map">
         <h2 class="visually-hidden">Расположение города Седона</h2>
-        <img src="https://via.placeholder.com/150x150" class="page-main__map-photo">
+        <img src="https://via.placeholder.com/150x150" class="page-main__map-photo" alt="Карта расположения города">
       </section>
     </main>
     <footer class="page-footer">
